[GStreamer] MediaPlayerPrivateGStreamer::sourceSetup() can be called from a non-main thread in some cases https://bugs.webkit.org/show_bug.cgi?id=258132

Reviewed by Xabier Rodriguez-Calvar.

The crash was happening due to usage of the WeakPtr m_player in non-main non-GC thread. The proposed
solution is to pass a reference to the PlatformMediaResource loader of the player to the HTTP source
element, thus avoiding usage of m_player in non-main non-GC thread.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::sourceSetup):
* Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcSetResourceLoader):
* Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.h:

Canonical link: https://commits.webkit.org/265298@main